--- a/styles.css
+++ b/styles.css
@@ -376,7 +376,7 @@
       rgba(0, 0, 0, 0) 0%,
       rgba(17, 17, 17, 0.6) 100%
     ),
-    url("../images/pic3.jpg");
+    url("/images/pic3.jpg");
   background-size: cover;
   position: relative;
   color: #fff;
@@ -388,7 +388,7 @@
       rgba(0, 0, 0, 0) 0%,
       rgba(17, 17, 17, 0.6) 100%
     ),
-    url("../images/pic4.jpg");
+    url("/images/pic4.jpg");
 }
 
 .services h2 {
