--- a/styles.css
+++ b/styles.css
@@ -253,7 +253,7 @@
   color: #fff;
   margin-top: 2rem;
   cursor: pointer;
-  transition: all 0.35s;
+  transition: ease-in-out 0.35s;
   outline: none;
 }
 
@@ -264,25 +264,9 @@
   text-decoration: none;
 }
 
-.main__btn:after {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  width: 0;
-  height: 100%;
-  background: #4837ff;
-  transition: all 0.35s;
-  border-radius: 4px;
-}
-
 .main__btn:hover {
-  color: #fff;
+  background-image: linear-gradient(to top, #fa3d88 0%, #f85947 100%);
 }
-
-/* .main__btn:hover:after {
-  width: 100%;
-} */
 
 .main__img--container {
   text-align: center;
